--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                     <h3 class=" pb-1 lg:pb-2 text-[10px] lg:text-xs tracking-widest font-bold text-Dark-Gray ">
                         IP ADDRESS
                     </h3>
-                    <p class="font-medium text-xl lg:text-2xl lg:max-w-52 xl:max-w-44 text-Very-Dark-Gray" id="ip-address">8.4.8.4</p>
+                    <p class="font-medium text-xl lg:text-2xl lg:max-w-52 xl:max-w-44 text-Very-Dark-Gray" id="ip-address"></p>
                 </div>
                 <div class="w-full lg:px-2 xl:pl-8 xl:pr-16 lg:border-l-2 ">
                     <h3 class="pb-1 lg:pb-2 text-[10px] lg:text-xs tracking-widest font-bold text-Dark-Gray ">LOCATION</h3>
-                    <p class="font-medium text-xl lg:text-2xl lg:max-w-52 xl:max-w-44 text-Very-Dark-Gray" id="location">Crosley, US</p>
+                    <p class="font-medium text-xl lg:text-2xl lg:max-w-52 xl:max-w-44 text-Very-Dark-Gray" id="location"></p>
                 </div>
                 <div class="w-full lg:px-2 xl:pl-8 xl:pr-16 lg:border-l-2 ">
                     <h3 class=" pb-1 lg:pb-2 text-[10px] lg:text-xs tracking-widest font-bold text-Dark-Gray ">TIMEZONE</h3>
-                    <p class="font-medium text-xl lg:text-2xl lg:max-w-52 xl:max-w-44 text-Very-Dark-Gray" id="timezone">UTC -06:00</p>
+                    <p class="font-medium text-xl lg:text-2xl lg:max-w-52 xl:max-w-44 text-Very-Dark-Gray" id="timezone"></p>
                 </div>
                 <div class="w-full lg:px-2 xl:pl-8 xl:pr-16 lg:border-l-2 ">
                     <h3 class=" pb-1 lg:pb-2 text-[10px] lg:text-xs tracking-widest font-bold text-Dark-Gray ">ISP</h3>
-                    <p class="font-medium text-xl lg:text-2xl lg:max-w-52 xl:max-w-44 text-Very-Dark-Gray" id="isp">Level 3 Communications, Inc.</p>
+                    <p class="font-medium text-xl lg:text-2xl lg:max-w-52 xl:max-w-44 text-Very-Dark-Gray" id="isp"></p>
                 </div>
             </div>
         </div>
